commandでlog fileをdownload, test commandを追加

--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -1,4 +1,4 @@
-NAME	:=	test
+NAME	:=	a.out
 CXX		:=	c++
 RM		:=	rm -f
 CXXFLAGS	:=	-Wall -Wextra -Werror -std=c++98
@@ -30,6 +30,12 @@ fclean	: clean
 	$(RM) $(NAME)
 
 re		: fclean all
+
+test	:
+	./$(NAME) | sed -E 's/[0-9]{8}_[0-9]{6}/19920104_091532/g' | diff -u - 19920104_091532.log # destructorだけ出てくる
+
+download:
+	curl -O https://projects.intra.42.fr/uploads/document/document/8753/19920104_091532.log
 
 nm		: fclean $(OBJS)
 	$(CXX) $(CXXFLAGS) $(NO_BUILTIN_FLAGS) $(OBJS) -o $(NAME)
