.PHONYにtestとdownloadを追加

--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -47,4 +47,4 @@ debug	: fclean $(OBJS)
 leak	:
 	leaks -quiet -atExit -- ./$(NAME)
 
-.PHONY	: all clean fclean re nm debug leak
+.PHONY	: all clean fclean re test download nm debug leak
